# STALK

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf  proxy_headers.conf
scripts/: run_app.sh
src/: main.py
src/api/social/: router.py
src/api/social/schemas/: analyze.py  codeforces.py  github.py  leetcode.py  stepik.py
src/services/analyze/: analyze.py
src/services/social/: base.py  codeforces.py  github.py  leetcode.py  stepik.py
src/utils/: env_file.py
